<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.SignUpFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="25dp"
        android:textStyle="italic"
        android:textColor="@color/yellow"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_bg"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_bg"
        android:hint="@string/password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/curve_button_bg"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:textStyle="italic"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txt_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"/>



</LinearLayout>