<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.HomeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signOut"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/sign_out"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/curve_button_bg"
        android:textColor="@color/white"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="right"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:textSize="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red"
                    android:textColor="@android:color/transparent"
                    android:text="@string/red" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_two"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red"
                    android:textColor="@android:color/transparent"
                    android:text="@string/red" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_three"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red"
                    android:textColor="@android:color/transparent"
                    android:text="@string/red" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_four"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green"
                    android:textColor="@android:color/transparent"
                    android:text="@string/green" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_five"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green"
                    android:textColor="@android:color/transparent"
                    android:text="@string/green" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_six"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green"
                    android:textColor="@android:color/transparent"
                    android:text="@string/green" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_seven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:textColor="@android:color/transparent"
                    android:text="@string/blue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_eight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:textColor="@android:color/transparent"
                    android:text="@string/blue" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/stroke_bg"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/btn_nine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:textColor="@android:color/transparent"
                    android:text="@string/blue" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="your score is 10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_history"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="History"
            android:textAllCaps="false"
            android:visibility="gone"
            android:background="@drawable/curve_button_bg"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_scramble"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Scamble"
            android:textAllCaps="false"
            android:background="@drawable/curve_button_bg"
            android:textColor="@color/white" />

    </LinearLayout>



</LinearLayout>